--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -27,9 +27,10 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "npm:rolldown-vite@7.1.14",
-    "gh-pages": "^6.3.0"
+    "vite-plugin-sitemap": "^0.8.2"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
